--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+.header {
+  width: 96%;
+  margin-left: 2%;
+  margin-bottom: 30px;
+  color: white;
+  background-color: #0d6c94;
   text-align: center;
+  font-size: xx-large;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn1 {
+  text-align: left !important;
+  width: 100% !important;
+  font-size: large;
+  color: white !important;
+  background-color: #0d6c94 !important;
+  border-radius: 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn1:hover {
+  background-color: rgb(185, 185, 39) !important;
+  cursor: pointer;
+  color: white !important;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  width: 96%;
+  margin-left: 2%;
+  display: flex;
+  flex-direction: row;
+  margin-top: inherit;
+  font-family: Helvetica, sans-serif;
+}
+.sidebar {
+  color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: Helvetica, sans-serif;
+  width: 20%;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.centerdiv {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  background-color: whitesmoke;
 }
